    vignettes will still run, but won't execute any rgl
    code.
  - The maintainer email address has been changed to 
    murdoch.duncan@gmail.com.
    
0.101.2
  - The build files have been updated to work with Rtools40
    on Windows.
  - rgl.snapshot and rgl.postscript could crash if a zero
    length filename was passed to them.
  - rglwidget() now saves a copy of the original scene,
    so it can be reconstructed or modified later.
    
0.102.10
  - More deprecation of older writeWebGL style controls.
  - Add extra knitr hooks, so support for rgl should be
    very similar to support for standard graphics output.
  - Major rewrite of the WebGL code so that transparency
    is handled better in rglwidget().  It has also been
    split into multiple files which are joined with 
    "minification" on installation.
  - Added utility function makeDependency() to support 
    Javascript library in source.
  - WebGL code now supports fog in scenes.  The default
    r3dDefaults now sets material$fog to TRUE, and bg$fog to
    "none".  (In rgl, fog must be set *both* in the background
    and in the object to display.)
    The formula used in WebGL is slightly different than in the 
    internal R display.) 
  - getr3dDefaults now has two optional arguments to specify
    what to retrieve, e.g. getr3dDefaults("material", "color")
    to retrieve r3dDefaults$material$color, with NULL 
    if either part is missing.
  - A bug in the initial color of a mesh object has been fixed.
  - A bug in translating mouse coordinates (reported on 
    StackOverflow by Richard Morey) when an rgl widget is
    included in a Gitbook has been fixed. 
  - Modified writeASY() for compatibility with Asymptote
    2.65.  (Reported by Pavel Stříž.)
  - Added fogScale parameter to bg3d() and rgl.bg() to
    allow increased or decreased fog.
  - Added fastTransparency parameter to spheres3d() and
    rgl.spheres(), to allow them to be drawn more quickly
    when transparency is used.