@@ -1108,3 +1108,6 @@ base graphics.
   - Added fastTransparency parameter to spheres3d() and
     rgl.spheres(), to allow them to be drawn more quickly
     when transparency is used.
+  - "mesh3d"" methods for shade3d, wire3d, and dots3d
+    have been rewritten to share code, allowing meshes
+    to have mixed front and back material properties.
